@@ -20,12 +20,15 @@ package barsuift.simLife.universe;
 
 import barsuift.simLife.Persistent;
 import barsuift.simLife.j3d.SimLifeCanvas3D;
+import barsuift.simLife.time.UniverseTimeController;
 
 public interface UniverseContext extends Persistent<UniverseContextState> {
 
     public SimLifeCanvas3D getCanvas3D();
 
     public Universe getUniverse();
+
+    public UniverseTimeController getUniverseTimeController();
 
     public void setFpsShowing(boolean fpsShowing);
 
