@@ -21,6 +21,7 @@ Ability to reset the camera view angle to nominal one (along Z axis, parallel to
 Improvement of the "File" menu to prevent potential IllegalStateException
 Improvement of the "File" menu to allow "Save" item to behave as "Save As..." item if no current save file is known
 Addition of a help menu to display navigation keys
+Addition of a speed switch radio button
 #### Add a calendar system (not used yet)
 
 
